# proyecto-bondis

./: .gitignore  BSAS Bus Graphs.ipynb  CMakeLists.txt  README.md  bondi.py  grafo_estaciones.gexf  proyecto_gephi.gephi
.ipynb_checkpoints/: BSAS Bus Graphs-checkpoint.ipynb
data/: edges.csv  edges1000.csv  edges30.csv  grafo_estaciones.gexf  nodes.csv  nodes1000.csv  nodes30.csv  paradas-de-colectivo.csv  recorrido-de-metrobus.csv
data/grafo_paradas/: edges.shx  grafo_paradas.dbf  grafo_paradas.shp  grafo_paradas.shx
libs/: Grafo.h  GraphVisualizer.cpp  GraphVisualizer.h  NodoGrafo.h  Person.h  Pos.h  ProgressBar.hpp  utils.h
src/: main.cpp
